// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRelatedContent should render Story Promo components when given appropriate data 1`] = `
<DocumentFragment>
  .emotion-85 {
  width: 100%;
}

@supports (display:grid) {
  .emotion-85 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-85 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-85 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-85 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-85 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-85 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-85 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-85 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-85 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-82 {
  margin-bottom: 1rem;
}

@media (max-width:14.9375rem) {
  .emotion-82 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-82 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-82 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-82 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-82 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-82 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-82 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-82 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-82 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-82 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-82 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-82 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-82 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

@media (min-width:37.5rem) {
  .emotion-82 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-82 {
    padding: 1.5rem;
    margin: 2rem;
  }
}

@media (max-width:37.5rem) {
  .emotion-82 {
    padding: 2rem;
    margin: 1rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width:37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-11 {
    margin-top: 0;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

.emotion-79 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .emotion-79 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-79 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-79 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-79 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-79 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-79 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-79 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}
}

.emotion-34 {
  padding: 0.5rem 0 1rem;
}

@media (max-width:62.9375rem) {
  .emotion-34 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-34:last-child {
  border: none;
}

@media (min-width:37.5rem) {
  .emotion-34 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-34 {
    padding: 0 0 1.5rem;
  }
}

.emotion-34:first-child {
  padding-top: 0;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-34:first-child {
    padding-top: 1rem;
  }
}

.emotion-34:last-child {
  padding-bottom: 0;
}

@supports (display:grid) {
  .emotion-34 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:80rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}
}

.emotion-31 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-31 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-31 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-31 {
      display: block;
    }
}
}

.emotion-19 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-19 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-19 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

.emotion-17 {
  position: relative;
}

.emotion-13 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-13 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-13 {
    background-size: 93px 27px;
  }
}

@media (min-width:25rem) {
  .emotion-15 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-15 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width:24.9375rem) {
  .emotion-15 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-29 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-29 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-29 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-29 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }

@media (min-width:63rem) {
    .emotion-29 {
      padding-top: 0.5rem;
    }
}
}

.emotion-25 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-25 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-25 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-23 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-23:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-23:hover,
.emotion-23:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-23:visited {
  color: #6E6E73;
}

.emotion-21 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-27 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-27 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-27 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<section
    aria-labelledby="related-content-heading"
    class="emotion-84 emotion-85 emotion-33"
    data-e2e="related-content-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-81 emotion-82 emotion-33"
      dir="ltr"
    >
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <div
          class="emotion-0 emotion-1"
        />
        <h2
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-4 emotion-5"
            >
              <span
                class="emotion-2 emotion-3"
                dir="ltr"
                id="related-content-heading"
              >
                Another thing we de for inside dis tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="emotion-33 emotion-79 emotion-80"
        dir="ltr"
        role="list"
      >
        <li
          class="emotion-33 emotion-34 emotion-35"
          dir="ltr"
        >
          <div
            class="emotion-31 emotion-32"
            data-e2e="story-promo"
          >
            <div
              class="emotion-19 emotion-20"
              dir="ltr"
            >
              <div
                class="emotion-17 emotion-18"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    class="lazyload-wrapper"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                </div>
                <div
                  class="emotion-15 emotion-16"
                />
              </div>
            </div>
            <div
              class="emotion-29 emotion-30"
              dir="ltr"
            >
              <h3
                class="emotion-25 emotion-26"
              >
                <a
                  class="emotion-23 emotion-24"
                  href="/pidgin/44508901"
                >
                  <span
                    role="text"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      , 
                    </span>
                    <span>
                      Meet boys who dey convert cassava to electricity
                    </span>
                  </span>
                </a>
              </h3>
              <time
                class="emotion-27 emotion-28"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-33 emotion-34 emotion-35"
          dir="ltr"
        >
          <div
            class="emotion-31 emotion-32"
            data-e2e="story-promo"
          >
            <div
              class="emotion-19 emotion-20"
              dir="ltr"
            >
              <div
                class="emotion-17 emotion-18"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    class="lazyload-wrapper"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                </div>
                <div
                  class="emotion-15 emotion-16"
                />
              </div>
            </div>
            <div
              class="emotion-29 emotion-30"
              dir="ltr"
            >
              <h3
                class="emotion-25 emotion-26"
              >
                <a
                  class="emotion-23 emotion-24"
                  href="/pidgin/tori-46975713"
                >
                  How light companies dey use estimated billing show Nigerians pepper
                </a>
              </h3>
              <time
                class="emotion-27 emotion-28"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-33 emotion-34 emotion-35"
          dir="ltr"
        >
          <div
            class="emotion-31 emotion-32"
            data-e2e="story-promo"
          >
            <div
              class="emotion-19 emotion-20"
              dir="ltr"
            >
              <div
                class="emotion-17 emotion-18"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    class="lazyload-wrapper"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                </div>
                <div
                  class="emotion-15 emotion-16"
                />
              </div>
            </div>
            <div
              class="emotion-29 emotion-30"
              dir="ltr"
            >
              <h3
                class="emotion-25 emotion-26"
              >
                <a
                  class="emotion-23 emotion-24"
                  href="/pidgin/tori-42494678"
                >
                  Nigeria: Wetin 5,222 megawatts electric fit do?
                </a>
              </h3>
              <time
                class="emotion-27 emotion-28"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CpsRelatedContent should render Story Promo components without <ul> when given single item in collection 1`] = `
<DocumentFragment>
  .emotion-43 {
  width: 100%;
}

@supports (display:grid) {
  .emotion-43 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-43 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-43 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-43 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-43 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-43 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-43 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-43 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-43 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-40 {
  margin-bottom: 1rem;
}

@media (max-width:14.9375rem) {
  .emotion-40 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-40 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-40 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-40 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-40 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-40 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-40 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-40 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-40 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-40 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-40 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-40 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-40 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

@media (min-width:37.5rem) {
  .emotion-40 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-40 {
    padding: 1.5rem;
    margin: 2rem;
  }
}

@media (max-width:37.5rem) {
  .emotion-40 {
    padding: 2rem;
    margin: 1rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width:37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-11 {
    margin-top: 0;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

.emotion-33 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-33 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

@media (min-width:37.5rem) {
    .emotion-33 {
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) {
    .emotion-33 {
      display: block;
    }
}
}

.emotion-19 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-19 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-19 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

.emotion-17 {
  position: relative;
}

.emotion-13 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-13 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-13 {
    background-size: 93px 27px;
  }
}

@media (min-width:25rem) {
  .emotion-15 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-15 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width:24.9375rem) {
  .emotion-15 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-31 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-31 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-31 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-31 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }

@media (min-width:63rem) {
    .emotion-31 {
      padding-top: 0.5rem;
    }
}
}

.emotion-25 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-25 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-25 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-23 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-23:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-23:hover,
.emotion-23:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-23:visited {
  color: #6E6E73;
}

.emotion-21 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-29 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-29 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-29 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-37 {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-37 {
    padding-bottom: 1.5rem;
  }
}

@supports (display:grid) {
  .emotion-35 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-35 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
      grid-column-gap: 1rem;
    }
}
}

.emotion-27 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-27 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-27 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-27 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .emotion-27 {
    display: none;
    visibility: hidden;
  }
}

<section
    aria-labelledby="related-content-heading"
    class="emotion-42 emotion-43 emotion-36"
    data-e2e="related-content-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-39 emotion-40 emotion-36"
      dir="ltr"
    >
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <div
          class="emotion-0 emotion-1"
        />
        <h2
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-4 emotion-5"
            >
              <span
                class="emotion-2 emotion-3"
                dir="ltr"
                id="related-content-heading"
              >
                Another thing we de for inside dis tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <div
        class="emotion-37 emotion-38"
      >
        <div
          class="emotion-35 emotion-36"
          dir="ltr"
        >
          <div
            class="emotion-33 emotion-34"
            data-e2e="story-promo"
          >
            <div
              class="emotion-19 emotion-20"
              dir="ltr"
            >
              <div
                class="emotion-17 emotion-18"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    class="lazyload-wrapper"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                </div>
                <div
                  class="emotion-15 emotion-16"
                />
              </div>
            </div>
            <div
              class="emotion-31 emotion-32"
              dir="ltr"
            >
              <h3
                class="emotion-25 emotion-26"
              >
                <a
                  class="emotion-23 emotion-24"
                  href="/pidgin/44508901"
                >
                  <span
                    role="text"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      , 
                    </span>
                    <span>
                      Meet boys who dey convert cassava to electricity
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="emotion-27 emotion-28"
              >
                James den Kwesi Ansah want convert most of Ghana's cassava waste into cheap electricity supply for schools, hospitals den villages.
              </p>
              <time
                class="emotion-29 emotion-30"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
